# market-data-multi-agent

./: .env.sample  .gitignore  README.md  market_research_summary.md  market_research_summary_2.md  market_research_summary_3.md  pyproject.toml  requirements.txt  streamlit_main.py
src/market_data_multi_agent/: crew.py  main.py
src/market_data_multi_agent/config/: agents.yaml  tasks.yaml
