[project]
name = "market_data_multi_agent"
version = "0.1.0"
description = "market_data_multi_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
    "firecrawl-py",
    "streamlit"
]

[project.scripts]
market_data_multi_agent = "market_data_multi_agent.main:run"
run_crew = "market_data_multi_agent.main:run"
train = "market_data_multi_agent.main:train"
replay = "market_data_multi_agent.main:replay"
test = "market_data_multi_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
